--- a/frontend/res/css/style.css
+++ b/frontend/res/css/style.css
@@ -14,7 +14,7 @@
     box-sizing: border-box;
     outline: none; border: none;
     text-decoration: none;
-    text-transform: capitalize;
+    text-transform: none;
     transition: .2s linear;
 }
 
